--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -11,8 +11,7 @@
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Note Taker
-    </a>
+    <a class="navbar-brand" href="/">Note Taker</a>
   </nav>
   <div class="container">
     <div style="margin-top: 80px;" class="jumbotron text-center">
@@ -22,7 +21,9 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/assets/js/index.js"></script>
+  <script type="text/javascript" src="../server.js"></script>
+  <script type="text/javascript" src="/assets/js/index.js"></script>
+  
 </body>
 
 </html>
