--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -26,7 +26,7 @@
       <div class="col-4 list-container">
         <div class="card">
           <ul class="list-group">
-          </ul>
+          <z/ul>
         </div>
       </div>
       <div class="col-8">
@@ -36,7 +36,10 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/assets/js/index.js"></script>
+  <script type="text/javascript" src="../server.js"></script>
+  <script type="text/javascript" src="/assets/js/index.js"></script>
+  
+
 </body>
 
 </html>
